tiny fix, overflow:hidden from media_module trips 1 or 2 pixels of type floated right. fucking stupid shit. HT to eagle eye @vinceniadevaia

--- a/app/assets/stylesheets/partials/_landing-page.scss
+++ b/app/assets/stylesheets/partials/_landing-page.scss
@@ -475,6 +475,10 @@ $landing-page-footer-font-color: #EFEFEF;
       margin-bottom: 1em;
     }
 
+    .xuser-data-timestamp {
+      padding-right: 2px;
+    }
+
     .xuser-message {
       min-height: 4em;
     }
